<resources>
    <string name="app_name">How much do I cost?</string>
    <string name="statistics">Statistics</string>
    <string name="add">ADD</string>
    <string name="label">Label</string>
    <string name="cost">Cost</string>
    <string name="select_date">Select Date</string>
    <string name="select_place">Select Place</string>
    <string name="save">Save</string>
    <string name="transaction">Transaction</string>
</resources>
